Deploy para produção

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@
 
 server {
     listen 80;
-    server_name SEU_DOMINIO_AQUI.com www.SEU_DOMINIO_AQUI.com;
+    server_name borracharoupa.fun www.borracharoupa.fun;
 
     # Redirecionar HTTP para HTTPS
     return 301 https://$server_name$request_uri;
@@ -11,11 +11,11 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name SEU_DOMINIO_AQUI.com www.SEU_DOMINIO_AQUI.com;
+    server_name borracharoupa.fun www.borracharoupa.fun;
 
     # Certificados SSL (serão gerados pelo Certbot)
-    ssl_certificate /etc/letsencrypt/live/SEU_DOMINIO_AQUI.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/SEU_DOMINIO_AQUI.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/borracharoupa.fun/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/borracharoupa.fun/privkey.pem;
 
     # Configurações SSL
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -75,4 +75,5 @@ server {
     access_log /var/log/nginx/borracha-de-roupa.access.log;
     error_log /var/log/nginx/borracha-de-roupa.error.log;
 }
+
 
